--- a/network_primary.ipynb
+++ b/network_primary.ipynb
@@ -379,10 +379,30 @@
    "source": [
     "for i in range(question_data.shape[0]): \n",
     "    G.add_edge(question_data['Topic (my opinion)'][i], question_data['title'][i]) #this creates nodes for every question and links it to its respective topic \n",
-    "    G.nodes[question_data['title'][i]]['score'] = int(question_data['Score ( 1 or 0 )'][i]) #this asigns teh score to each node \n",
-    "    G.nodes[question_data['title'][i]]['type'] = 'question'\n",
+    "    G.nodes[question_data['title'][i]]['score'] = int(question_data['Score ( 1 or 0 )'][i]) #this asigns the score to each node \n",
+    "    G.nodes[question_data['title'][i]]['type'] = 'question' # this asigns the question type to each node in the exam\n",
     "print(len(G.nodes()))\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 343,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'descendants': 46, 'Questions': 20, 'size': 10}"
+      ]
+     },
+     "execution_count": 343,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "G.nodes['Economics']"
    ]
   },
   {
