give type attribute to separate topics and questions

--- a/network_primary.ipynb
+++ b/network_primary.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,17 +60,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "for parent, children in hierarchy.items(): \n",
-    "    edge_maker(G, parent, children)"
+    "    edge_maker(G, parent, children)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -103,6 +103,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -111,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +360,7 @@
        "19  Stagflation, know the stages of economy and mo...                 1  "
       ]
      },
-     "execution_count": 333,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -387,16 +394,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'descendants': 46, 'Questions': 20, 'size': 10}"
+       "{}"
       ]
      },
-     "execution_count": 343,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,6 +428,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'score': 0, 'type': 'question', 'descendants': 0, 'Questions': 0, 'size': 10}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "G.nodes['Nobel Prize']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -429,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -691,6 +718,7 @@
        "  'title': '1'},\n",
        " {'color': '#97c2fc',\n",
        "  'score': 1,\n",
+       "  'type': 'question',\n",
        "  'descendants': 0,\n",
        "  'Questions': 0,\n",
        "  'size': 10,\n",
@@ -700,6 +728,7 @@
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'score': 1,\n",
+       "  'type': 'question',\n",
        "  'descendants': 0,\n",
        "  'Questions': 0,\n",
        "  'size': 10,\n",
@@ -709,6 +738,7 @@
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'score': 1,\n",
+       "  'type': 'question',\n",
        "  'descendants': 0,\n",
        "  'Questions': 0,\n",
        "  'size': 10,\n",
@@ -718,6 +748,7 @@
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'score': 1,\n",
+       "  'type': 'question',\n",
        "  'descendants': 0,\n",
        "  'Questions': 0,\n",
        "  'size': 10,\n",
@@ -727,6 +758,7 @@
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'score': 1,\n",
+       "  'type': 'question',\n",
        "  'descendants': 0,\n",
        "  'Questions': 0,\n",
        "  'size': 10,\n",
@@ -736,6 +768,7 @@
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'score': 1,\n",
+       "  'type': 'question',\n",
        "  'descendants': 0,\n",
        "  'Questions': 0,\n",
        "  'size': 10,\n",
@@ -745,6 +778,7 @@
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'score': 1,\n",
+       "  'type': 'question',\n",
        "  'descendants': 0,\n",
        "  'Questions': 0,\n",
        "  'size': 10,\n",
@@ -754,6 +788,7 @@
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'score': 1,\n",
+       "  'type': 'question',\n",
        "  'descendants': 0,\n",
        "  'Questions': 0,\n",
        "  'size': 10,\n",
@@ -763,6 +798,7 @@
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'score': 1,\n",
+       "  'type': 'question',\n",
        "  'descendants': 0,\n",
        "  'Questions': 0,\n",
        "  'size': 10,\n",
@@ -772,6 +808,7 @@
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'score': 0,\n",
+       "  'type': 'question',\n",
        "  'descendants': 0,\n",
        "  'Questions': 0,\n",
        "  'size': 10,\n",
@@ -781,6 +818,7 @@
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'score': 1,\n",
+       "  'type': 'question',\n",
        "  'descendants': 0,\n",
        "  'Questions': 0,\n",
        "  'size': 10,\n",
@@ -790,6 +828,7 @@
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'score': 1,\n",
+       "  'type': 'question',\n",
        "  'descendants': 0,\n",
        "  'Questions': 0,\n",
        "  'size': 10,\n",
@@ -799,6 +838,7 @@
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'score': 1,\n",
+       "  'type': 'question',\n",
        "  'descendants': 0,\n",
        "  'Questions': 0,\n",
        "  'size': 10,\n",
@@ -808,6 +848,7 @@
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'score': 1,\n",
+       "  'type': 'question',\n",
        "  'descendants': 0,\n",
        "  'Questions': 0,\n",
        "  'size': 10,\n",
@@ -817,6 +858,7 @@
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'score': 1,\n",
+       "  'type': 'question',\n",
        "  'descendants': 0,\n",
        "  'Questions': 0,\n",
        "  'size': 10,\n",
@@ -826,6 +868,7 @@
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'score': 1,\n",
+       "  'type': 'question',\n",
        "  'descendants': 0,\n",
        "  'Questions': 0,\n",
        "  'size': 10,\n",
@@ -835,6 +878,7 @@
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'score': 1,\n",
+       "  'type': 'question',\n",
        "  'descendants': 0,\n",
        "  'Questions': 0,\n",
        "  'size': 10,\n",
@@ -844,6 +888,7 @@
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'score': 1,\n",
+       "  'type': 'question',\n",
        "  'descendants': 0,\n",
        "  'Questions': 0,\n",
        "  'size': 10,\n",
@@ -853,6 +898,7 @@
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'score': 1,\n",
+       "  'type': 'question',\n",
        "  'descendants': 0,\n",
        "  'Questions': 0,\n",
        "  'size': 10,\n",
@@ -862,6 +908,7 @@
        "  'title': '0'},\n",
        " {'color': '#97c2fc',\n",
        "  'score': 0,\n",
+       "  'type': 'question',\n",
        "  'descendants': 0,\n",
        "  'Questions': 0,\n",
        "  'size': 10,\n",
@@ -951,7 +998,7 @@
        "  'title': '0'}]"
       ]
      },
-     "execution_count": 339,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -962,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -987,10 +1034,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x14cebf3b0>"
+       "<IPython.lib.display.IFrame at 0x1346e4c20>"
       ]
      },
-     "execution_count": 340,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
